Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -8,6 +8,7 @@
     * Add myth version configuration option
     * Add ability to mark an episode as recorded
     * Script to add programid to episodes without a programid in DB
+    * Script to verify all required perl modules are installed
 
 1.0.9
     * Add ability to disable subtitle matching on individual shows
