--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -121,10 +121,11 @@ Configuration options:
 ----------------------
 The only setting that you potentially need to change is the value for the mythtv version.  You should take a look at these and understand what each setting is used for so that you can make configuration changes to suit your needs.  All of these configuration options should be changed from the mythweb settings utility.
 
-#############
-Settings Tab:
-#############
+==#############==
+==Settings Tab:==
+==#############==
 
+---------------
 ===MythTV Version:===
 ---------------
 This option is used to set your currently running mythtv version.  The default value is .24+
@@ -136,7 +137,8 @@ options:
 .24+  - Used for .24 and above
 }}}
 
-==Countries (space seperated):==
+----------------------------
+===Countries (space seperated):===
 ----------------------------
 This option is used to set the country or countries shows that will be retrieved from TVRage.com and displayed in mythepisode.  The default is set to "US".  Each country should only be 2 characters and seperated by a space if more than one country is selected.
 {{{
