--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -122,7 +122,7 @@ Configuration options:
 The only setting that you potentially need to change is the value for the mythtv version.  You should take a look at these and understand what each setting is used for so that you can make configuration changes to suit your needs.  All of these configuration options should be changed from the mythweb settings utility.
 
 
-==Settings Tab:==
+=Settings Tab=
 
 ---------------
 ===MythTV Version:===
@@ -201,7 +201,7 @@ This option is used to set the size of the thumbnail displayed on the episode li
 
 
 
-==Override Tab:==
+=Override Tab=
 
 This tab is used to configure shows to display properly in mythepisode that have names that don't match.  When mythtv records a show it has a specific title that may not match exactly with what is listed in TVRage.com.  As a result mythepisode doesn't know how to display that show on the recorded page.
 {{{
