--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -1,8 +1,7 @@
 #summary Updates for specific releases
 #labels Featured
 
-= Details =
-1.0.10
+*1.0.10*
     * Fix to scheduled episode matching with (country) after the title
     * Fix to grabid.pl for info grabbing from thetvdb.com
     * Add myth version configuration option
@@ -10,13 +9,13 @@
     * Script to add programid to episodes without a programid in DB
     * Script to verify all required perl modules are installed
 
-1.0.9
+*1.0.9*
     * Add ability to disable subtitle matching on individual shows
     * Add Last Update date to episode display page
     * Move documents to docs directory
     * Code cleanup(WIP)
 
-1.0.8
+*1.0.8*
     * Format code comments
     * Fix to previous recording deletion
     * Add episode check against mythvideo
@@ -27,7 +26,7 @@
     * Add navigation menu to episodes, previous recordings, and tvwish
     * Move show information popup active when hovering over thumbnail
 
-1.0.7
+*1.0.7*
     * Many bug fixes
     * Fix to external tvrage links
     * Updated some of the code comments
@@ -48,40 +47,40 @@
     * Added ability to configure override.txt from mythweb settings
     * Updated installation instructions
 
-1.0.6
+*1.0.6*
     * Fix path issues with handler.php
     * Create directories automatically if they don't exist.  Initial install doesn't require installation of data.tar.gz
 
-1.0.5
+*1.0.5*
     * Addition of data/episode/country.txt so that the user can specify the countries they choose for show listings.  The default country is the "US" if no country file exists.
     * Fix tvwish title issue
     * Hover over the show title on the episodes listing page and get a show summary.  The show title is also linked to tvrage for the specific show title.
 
-1.0.4
+*1.0.4*
     * Update to grabid.pl that significantly reduces the time it takes to update episode information.  Remove the need for summary.pl
     * Change the way in which episode numbers are displayed.  Cleans up some issues with duplicates
     * Fix issue with mythepisode on Internet Explorer
     * Added the ability to override shows that are recorded with titles that are too specific.  For example "Survivor" is recorded by mythtv based on the listing "Survivor: Nicaragua".  Without the override feature mythepisode will not recognize it as being recorded and will not know about previous/scheduled recordings.  See the README for more details
 
-1.0.3
+*1.0.3*
   * Update to grabid.pl to grab additional show information and show thumbnail
   * Update episodes.php to display thumbnail and additional show information
   * Improved show/episode matching
   * Temporarily disabled deletes of episodes from the DB until I figure out what all tables are impacted
   * fix to tvwish implementation
 
-1.0.2
+*1.0.2*
   * Update grabid.pl and grabshowsall.pl to bail out if it can't connect to tvrage.com, leaving current shows.txt and summary files intact
   * Remove class/include directories from mythepisode and point to modules/tv
   * Fix layout of special episodes
   * Update paths so different distros require fewer path updates - only one possible path update in runwish
 
-1.0.1
+*1.0.1*
   * Fix to grabid.pl for special characters
   * Better matching on episodes without subtitles or invalid subtitles
   * Fix tvwish variable
   
-31 Aug 2010
+*31 Aug 2010*
   * Update to look of show/episode listing page
   * Update delete button look on previous recordings page
   * Fix sort issue on previous recordings page
@@ -91,15 +90,15 @@
   * Code cleanup - still needs some work
   * Fix grab of summary information
 
-21 Aug 2010
+*21 Aug 2010*
   * Added Previous Recordings to mainpage
   * Fix for subtitles that are not exact matches
   * Enhanced the previous recordings within the episode listing
   * Fixed some php errors
 
-19 Aug 2010
+*19 Aug 2010*
   * fix a few issues with previous recordings
 
-18 Aug 2010
+*18 Aug 2010*
   * change the way previous recordings are viewed
   * Update to grabshowsall.pl to allow multiple aoi's
