--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -114,8 +114,6 @@ If your paths differ from mine above then you will have to make a few changes to
 
 INSTALLATION IS NOW DONE.  CHECKOUT THE CONFIGURATION OPTIONS LISTED BELOW.
 
-
-################################################################################
 <BR>
 ----------------------
 ----------------------
@@ -128,7 +126,7 @@ The only setting that you potentially need to change is the value for the mythtv
 ==Settings Tab==
 
 ---------------
-===MythTV Version:===
+====MythTV Version:====
 ---------------
 This option is used to set your currently running mythtv version.  The default value is .24+
 {{{
@@ -140,7 +138,7 @@ options:
 }}}
 
 ----------------------------
-===Countries (space seperated):===
+====Countries (space seperated):====
 ----------------------------
 This option is used to set the country or countries shows that will be retrieved from TVRage.com and displayed in mythepisode.  The default is set to "US".  Each country should only be 2 characters and seperated by a space if more than one country is selected.
 {{{
@@ -152,7 +150,7 @@ US UK CA
 After making a change to this setting you will need to do an "Update Shows" from the main mythepisode page.
 
 ------------------
-===Default page view:===
+====Default page view:====
 ------------------
 This option is used to determine which page is displayed by default when you select "TV Episodes".  The default setting is "recorded".
 {{{
@@ -163,7 +161,7 @@ all      - Display every(I'm sure some are missing) TV series that has ever aire
 }}}
 
 ------------------
-===Default data site:===
+====Default data site:====
 ------------------
 This option is used to choose the query site used for grabbing episode information.  The default setting is TVRage.com
 {{{
@@ -173,13 +171,13 @@ TheTVDB.com
 }}}
 
 -----------------------
-===Display tvwish options:===
+====Display tvwish options:====
 -----------------------
 This option is used to turn on/off the display of tvwish options and menus.  Some mythepisode users don't want to use tvwish and don't want it displayed.  The default is set "yes" to display tvwish options
 
 
 ------------------------------
-===Episode matching accuracy (%):===
+====Episode matching accuracy (%):====
 ------------------------------
 This option is used to help improve episode matching.  Because of spelling differences from different sources there are times when episodes fail to be marked as previously recorded or scheduled for recording.  To overcome this we compare the episode name from TVRage.com/TheTVDB.com against the episode name from mythtv and label as a match if the character match between the two is equal to or greater than the episode matching percentage.  The default setting is 85% which means the two must match 85% or higher to get labeled as a match.
 {{{
@@ -195,13 +193,13 @@ Setting this setting too low can result in many false matches.  Setting it too h
 
 
 -----------------------------------------
-===Update episode info if older than (days):===
+====Update episode info if older than (days):====
 -----------------------------------------
 This option is used to set how often episode information is automatically grabbed from TVRage.com/TheTVDB.com.  The default setting is 7 days.  When you click on a TV show, mythepisode will verify that you have downloaded episode information and that it is not older than 7 days.  If it is older than 7 days mythepisode will go to TVRage.com/TheTVDB.com and get updated information.
 
 
 -----------------------------------
-===Size of episode thumbnail (pixels):===
+====Size of episode thumbnail (pixels):===
 -----------------------------------
 This option is used to set the size of the thumbnail displayed on the episode listing page.  The default settings is "250" pixels.
 
