--- a/trunk/docs/README
+++ b/trunk/docs/README
@@ -150,7 +150,7 @@ Configuration options:
 The only setting that you potentially need to change is the value for the mythtv
 version.  You should take a look at these and understand what each setting is used
 for so that you can make configuration changes to suit your needs.  All of these
-configuation options should be changed from the mythweb settings utility.
+configuration options should be changed from the mythweb settings utility.
 
 #############
 Settings Tab:
