--- a/trunk/docs/CHANGES
+++ b/trunk/docs/CHANGES
@@ -1,5 +1,6 @@
 1.0.11
     * Fix typo in welcome.php
+    * Fix for special character display in tvwish
 
 1.0.10
     * Fix to scheduled episode matching with (country) after the title
