Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -4,6 +4,7 @@
 *1.0.11(trunk)*
     * Fix typo in welcome.php
     * Fix for special character display in tvwish
+    * Fix issue with episode deletes with mythtv .25
 
 *1.0.10*
     * Fix to scheduled episode matching with (country) after the title
